--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,10 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
+anyhow = "1.0.86"
 bevy = "0.14"
+bevy_ecs_tilemap="0.14.0"
+ldtk_rust = "0.6.0"
+log = "0.4.22"
+serde_json = "1.0.120"
+thiserror = "1.0.63"
