--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,14 @@ opt-level = 3
 [dependencies]
 anyhow = "1.0.86"
 bevy = "0.14"
+bevy-inspector-egui = {version="0.25.1", optional = true}
 bevy_ecs_ldtk = {version="0.10.0", features=["atlas"]}
 bevy_ecs_tilemap="0.14.0"
 ldtk_rust = "0.6.0"
 log = "0.4.22"
 serde_json = "1.0.120"
 thiserror = "1.0.63"
+
+
+[features]
+inspector=["dep:bevy-inspector-egui"]
